// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Intro] screen rendering test should render [Dark] theme 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          Object {
            "marginTop": 100,
          },
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "72%",
        },
        undefined,
      ]
    }
  >
    <View
      activeOpacity={0.6}
      delayPressIn={50}
      disabled={false}
      onPress={[Function]}
      testID="btn-login"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Image
          source={
            Object {
              "createTransformer": [Function],
            }
          }
          style={
            Object {
              "height": 24,
              "left": 12,
              "position": "absolute",
              "width": 24,
            }
          }
        />
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "black",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Login
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 12,
        }
      }
    />
    <View
      activeOpacity={0.6}
      delayPressIn={50}
      onPress={[Function]}
      testID="btn-navigate"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "black",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Navigate to Temp
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 12,
        }
      }
    />
    <View
      activeOpacity={0.6}
      delayPressIn={50}
      onPress={[Function]}
      testID="btn-theme"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "black",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Change theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render [isDisabled] status 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          Object {
            "marginTop": 100,
          },
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "72%",
        },
        undefined,
      ]
    }
  >
    <View
      activeOpacity={0.6}
      delayPressIn={50}
      disabled={false}
      onPress={[Function]}
      testID="btn-login"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Image
          source={
            Object {
              "createTransformer": [Function],
            }
          }
          style={
            Object {
              "height": 24,
              "left": 12,
              "position": "absolute",
              "width": 24,
            }
          }
        />
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "black",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Login
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 12,
        }
      }
    />
    <View
      activeOpacity={0.6}
      delayPressIn={50}
      onPress={[Function]}
      testID="btn-navigate"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "black",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Navigate to Temp
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 12,
        }
      }
    />
    <View
      activeOpacity={0.6}
      delayPressIn={50}
      onPress={[Function]}
      testID="btn-theme"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "black",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Change theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render [isLoading] status 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          Object {
            "marginTop": 100,
          },
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "72%",
        },
        undefined,
      ]
    }
  >
    <View
      activeOpacity={0.6}
      delayPressIn={50}
      disabled={false}
      onPress={[Function]}
      testID="btn-login"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Image
          source={
            Object {
              "createTransformer": [Function],
            }
          }
          style={
            Object {
              "height": 24,
              "left": 12,
              "position": "absolute",
              "width": 24,
            }
          }
        />
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "black",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Login
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 12,
        }
      }
    />
    <View
      activeOpacity={0.6}
      delayPressIn={50}
      onPress={[Function]}
      testID="btn-navigate"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "black",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Navigate to Temp
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 12,
        }
      }
    />
    <View
      activeOpacity={0.6}
      delayPressIn={50}
      onPress={[Function]}
      testID="btn-theme"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "borderBottomColor": "white",
              "borderLeftColor": "white",
              "borderRightColor": "white",
              "borderTopColor": "white",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "black",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Change theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render outer component and snapshot matches 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "white",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 18,
            "lineHeight": 27,
          },
          Object {
            "marginTop": 100,
          },
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 18,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 18,
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "72%",
        },
        undefined,
      ]
    }
  >
    <View
      activeOpacity={0.6}
      delayPressIn={50}
      disabled={false}
      onPress={[Function]}
      testID="btn-login"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "black",
              "borderBottomColor": "black",
              "borderLeftColor": "black",
              "borderRightColor": "black",
              "borderTopColor": "black",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Image
          source={
            Object {
              "createTransformer": [Function],
            }
          }
          style={
            Object {
              "height": 24,
              "left": 12,
              "position": "absolute",
              "width": 24,
            }
          }
        />
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "white",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Login
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 12,
        }
      }
    />
    <View
      activeOpacity={0.6}
      delayPressIn={50}
      onPress={[Function]}
      testID="btn-navigate"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "black",
              "borderBottomColor": "black",
              "borderLeftColor": "black",
              "borderRightColor": "black",
              "borderTopColor": "black",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "white",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Navigate to Temp
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 12,
        }
      }
    />
    <View
      activeOpacity={0.6}
      delayPressIn={50}
      onPress={[Function]}
      testID="btn-theme"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "black",
              "borderBottomColor": "black",
              "borderLeftColor": "black",
              "borderRightColor": "black",
              "borderTopColor": "black",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "white",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Change theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;
